fix: z-index

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -188,7 +188,7 @@
 }
 
 .medium-zoom-overlay {
-  z-index: 20;
+  z-index: 22;
 }
 
 .medium-zoom-image {
